--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 # Copy this file to .env and fill in your actual values
 
 # Application Settings
-APP_NAME=SAP-Elastic Integration
+APP_NAME=RADAR Backend
 ENVIRONMENT=PRODUCTION
 LOG_LEVEL=INFO
 
