Uso le immagini locali invece di cercare di pullare da cloud

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: radar-backend
         image: radar-backend:latest # Replace with your actual image name and tag
-        imagePullPolicy: Always
+        imagePullPolicy: Never  # Use local image only
         env:
         # Configuration from ConfigMap
         - name: APP_NAME
