aggiunta variabile per specifica tipo di aggiornamento elastic

--- a/.env.template
+++ b/.env.template
@@ -17,3 +17,5 @@ SAP_HANA_USER=your_sap_user
 SAP_HANA_PASSWORD=your_sap_password
 SAP_DATABASE=your_database_name
 SAP_HANA_MASTER_QUERY=SELECT * FROM "@KAIROS_RADAR"
+
+UPDATE_MODE=FULL
